# webbits

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  noxfile.py  pyproject.toml  ruff.toml  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
demo/flask/: app.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
playground/: html.py  test_html.py
src/webbits/: __init__.py  lib.py
src/webbits/html/: __init__.py  _constants.py  _elements.py  _h.py
tests/: __init__.py  _test_new_dsl.py  test_h.py  test_html.py
